feat: add game demo

--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   "license": "ISC",
   "dependencies": {
     "@pixi/react": "^8.0.0",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@tailwindcss/vite": "^4.0.13",
     "@tanstack/react-router": "^1.114.15",
     "@tanstack/react-start": "^1.114.15",
+    "@types/three": "^0.174.0",
     "pixi.js": "^8.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.13",
+    "three": "^0.174.0",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
