--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@pixi/react": "^8.0.0",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
+    "@tailwindcss/cli": "^4.0.13",
     "@tailwindcss/vite": "^4.0.13",
     "@tanstack/react-router": "^1.114.15",
     "@tanstack/react-start": "^1.114.15",
     "@types/three": "^0.174.0",
+    "autoprefixer": "^10.4.21",
     "pixi.js": "^8.8.1",
+    "postcss": "^8.5.3",
     "rc-joystick": "^1.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
