--- a/package.json
+++ b/package.json
@@ -1,42 +1,65 @@
 {
-  "name": "find-ton",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "tanstarter",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "db": "drizzle-kit",
+    "ui": "pnpm dlx shadcn@canary",
+    "auth": "pnpm dlx @better-auth/cli@latest",
+    "auth:generate": "pnpm dlx @better-auth/cli@latest generate --y --output ./src/lib/server/schema/auth.schema.ts && prettier --write ./src/lib/server/schema/auth.schema.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@pixi/react": "^8.0.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
-    "@tailwindcss/cli": "^4.0.13",
-    "@tailwindcss/vite": "^4.0.13",
-    "@tanstack/react-router": "^1.114.15",
-    "@tanstack/react-start": "^1.114.15",
-    "@types/three": "^0.174.0",
-    "autoprefixer": "^10.4.21",
-    "pixi.js": "^8.8.1",
-    "postcss": "^8.5.3",
+    "@tanstack/react-query": "^5.67.3",
+    "@tanstack/react-query-devtools": "^5.67.3",
+    "@tanstack/react-router": "^1.114.17",
+    "@tanstack/react-router-devtools": "^1.114.18",
+    "@tanstack/react-router-with-query": "^1.114.17",
+    "@tanstack/react-start": "^1.114.17",
+    "@telegram-apps/sdk-react": "^3.1.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "better-auth": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.40.0",
+    "lucide-react": "^0.479.0",
+    "postgres": "^3.4.5",
     "rc-joystick": "^1.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.13",
-    "three": "^0.174.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^1.32.1",
+    "@eslint/js": "^9.22.0",
+    "@tailwindcss/vite": "^4.0.13",
+    "@tanstack/eslint-plugin-query": "^5.67.2",
+    "@tanstack/eslint-plugin-router": "^1.114.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/three": "^0.174.0",
+    "babel-plugin-react-compiler": "latest",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react-compiler": "latest",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.13",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
