--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "valtio": "^2.1.4",
     "vinxi": "^0.5.3"
   },
   "devDependencies": {
