--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@tanstack/react-router-devtools": "^1.114.18",
     "@tanstack/react-router-with-query": "^1.114.17",
     "@tanstack/react-start": "^1.114.17",
+    "@telegram-apps/init-data-node": "^2.0.3",
     "@telegram-apps/sdk-react": "^3.1.2",
     "@vitejs/plugin-react": "^4.3.4",
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.479.0",
     "postgres": "^3.4.5",
@@ -37,7 +39,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "valtio": "^2.1.4",
-    "vinxi": "^0.5.3"
+    "vinxi": "^0.5.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.32.1",
