--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "colyseus.js": "^0.16.11",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "lucide-react": "^0.479.0",
