--- a/src/lib/colyseus/package.json
+++ b/src/lib/colyseus/package.json
@@ -32,9 +32,10 @@
   },
   "dependencies": {
     "@colyseus/bun-websockets": "^0.16.1",
+    "@colyseus/cloud": "^1.0.12",
     "@colyseus/monitor": "^0.16.0",
     "@colyseus/playground": "^0.16.0",
-    "@colyseus/tools": "^0.16.0",
+    "@colyseus/tools": "^0.16.8",
     "colyseus": "^0.16.0",
     "express": "^4.18.2"
   }
